--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-/* navigation bar */
+/* navigation bar */ 
 .navbar {
     display: flex;
     /* width: 100%; */
@@ -55,13 +55,31 @@
 
 .sm-navbar{
     display: none;
+    justify-content: space-between;
+    padding: 1.5em;
 }
+
+.sm-navbar span{
+    font-size: 1.2em;
+    color: #707070; 
+    /* margin: -1.3em 0em 0em em; */
+}
+
+.sm-navbar a input{
+    width: 20em;
+    padding: .5em;
+    background-color: #2C2C2C;
+    color: #B2B2B2;
+    border: none;
+}
+
+
 
 /* For responsiveness */
 .toggle-button {
-	position: absolute;
+	/* position: absolute; */
 	top: .75rem;
-	right: 1rem;
+	left: 1rem;
 	display: none;
 	flex-direction: column;
 	justify-content: space-between;
@@ -72,9 +90,9 @@
 }
 
 .toggle-button .bar {
-	height: 3px;
+	height: 1px;
 	width: 100%;
-	background-color: white;
+	background-color: #707070;
 	border-radius: 10px;
 }
 
@@ -84,14 +102,10 @@
         display: none;
     }
 
-    .sm-navbar {
+    .sm-navbar{
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 1px 0px;
-        width: 100%;
     }
-    
+
     .toggle-button {
         display: flex;
         background: rgba(0,0,0,0);
@@ -102,11 +116,11 @@
     }
 
     .toggle-button.active .bar:nth-child(1) {
-        transform: translateY(9px) rotate(50deg);
+        transform: translateY(9px) rotate(45deg);
     }
 
     .toggle-button.active .bar:nth-child(3) {
-        transform: translateY(-9px) rotate(-50deg);
+        transform: translateY(-9px) rotate(-45deg);
     }
 
     .navbar-links {
