--- a/css/index.css
+++ b/css/index.css
@@ -243,6 +243,7 @@ html,body{
     height: 3em;
     border: none;
     cursor: pointer;
+    background-color: white;
 }
 
 .products-main-container .more-products{
@@ -286,7 +287,7 @@ html,body{
 
 @media only screen and (max-width: 991px) {
     h3{
-        font-size: 1em;
+        font-size: .9em;
     }
 
     p{
