--- a/css/about.css
+++ b/css/about.css
@@ -1,57 +1,74 @@
-*{
-    margin: 0px;
-    padding: 0px;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
-body{
-    background-color: #171719;
+body {
+  background-color: #171719;
+}
+
+h2 {
+  color: #e6e6e6;
+}
+
+p {
+  line-height: 2em;
+  color: #c4c4c4;
+}
+
+/* About Kabstore */
+.about {
+  color: white;
+  padding: 0.5rem 4em;
+  text-align: center;
 }
 
 /* hero section */
-.herosection{
-    display: flex;
-    padding: .5rem 4em;
+.herosection {
+  display: flex;
+  padding: 0.5rem 4em;
 }
 
-.herosection div{
-    width: 50%;
+.herosection div {
+  width: 50%;
 }
 
-.herosection .image{
-    width: 33em;
-    height: 30em;
-    background-image: url(../images/kabstore-ceo.png);
-    background-size: contain;
-    background-repeat: no-repeat;
+.herosection .image {
+  width: 33em;
+  height: 30em;
+  background-image: url(../images/kabstore-ceo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
-.herosection p{
-    margin: 6em 5em 0em 5em;
-    color: white;
-    border: 1px solid #8C8C8C;
-    padding: 5em 2em;
-    line-height: 2em;
+.herosection p {
+  margin: 6em 5em 0em 5em;
+  border: 1px solid #8c8c8c;
+  padding: 5em 2em;
+  /* line-height: 2em; */
 }
 
 @media only screen and (max-width: 991px) {
-    .herosection{
-        display: block;
-        padding: 1.5em;
-    }
+  .herosection {
+    display: block;
+    padding: 1.5em;
+  }
 
-    .herosection div{
-        width: 100%;
-    }
+  .herosection div {
+    width: 100%;
+  }
 
-    .herosection .image{
-        width: 30em;
-        height: 20em;
-    }
-    
-    .herosection p{
-        margin: 1em 0em 0em 0em;
-        padding: 2em 2em;
-        line-height: 2em;
-    }
+  .herosection .image {
+    width: 30em;
+    height: 20em;
+  }
 
+  .herosection p {
+    margin: 1em 0em 0em 0em;
+    padding: 2em 2em;
+    line-height: 2em;
+  }
 }
