--- a/css/header.css
+++ b/css/header.css
@@ -1,16 +1,19 @@
 /* navigation bar */ 
 .navbar {
     display: flex;
-    /* width: 100%; */
-    height: 50px;
+    width: auto;
+    /* height: 20px; */
     background: #171719;
-    padding: .5rem 4em;
+    padding: .1rem 5rem;
 	justify-content: space-between;
 	align-items: center;
+    /* position: fixed; */
+    z-index: 9;
 }
 
 .logo{
     width: 3em;
+    /* height: em; */
 }
 
 .navbar-links, .navbar-link {
@@ -26,42 +29,61 @@
 
 .navbar-links li, .navbar-link li {
 	list-style: none;
+
 }
 
 .navbar-links li a, .navbar-link li a {
 	display: block;
 	text-decoration: none;
 	color: #707070;
-	padding: 1rem;
+	padding:  0rem 1rem;
     position: relative;
 }
 
-.navbar-links li a:active{
+.navbar-links li a.active{
     color: #d3d3d3;
+    background-color: rgba(0,0,0,0);
 }
 
 .navmenu{
-    margin-right: 19em;
+    margin-right: 5em;
 }
 
 .navmenu li{
-    padding: 0em 1em;
+    padding: .5em 1em;
 }
 
 .navbtn i{
     color: #707070;
-    padding: 1rem;
+    padding: .5rem;  
 }
 
 .navbar-links li a:hover, .navbtn i:hover{
     color: #DEDEDE;
 }
 
+.navbtn .search-bar{
+    width: 15em;
+    height: 1em;
+    padding: 1em;
+    font-size: 1em; 
+    background-color: #2C2C2C;
+    color: #B2B2B2;
+    border: none;
+    margin-top: .1em;
+}
+
+.navbtn .search-icon{
+    margin-left: -1.9em;
+}
+
 /* sm screen navbar */
 .sm-navbar{
     display: none;
-    padding: 1.5em;
+    padding: 0.8em 1.5em;
     width: auto;
+    /* height: ; */
+    background-color: #171719;
 }
 
 .nav-btns{
@@ -85,7 +107,9 @@
 
 .sm-navbar a input{
     width: 20em;
-    padding: .5em;
+    padding: 1em;
+    font-size: 1em;
+    margin-left: -2em;
     background-color: #2C2C2C;
     color: #B2B2B2;
     border: none;
@@ -137,11 +161,11 @@
     }
 
     .toggle-button.active .bar:nth-child(1) {
-        transform: translateY(9px) rotate(45deg);
+        transform: translateY(10px) rotate(45deg);
     }
 
     .toggle-button.active .bar:nth-child(3) {
-        transform: translateY(-9px) rotate(-45deg);
+        transform: translateY(-10px) rotate(-45deg);
     }
 
     .logo{
@@ -166,6 +190,7 @@
     
     .navbar-link ul li a {
         padding: .5rem 1rem;
+        text-align: left;
     }
 
     .navmenu{
