--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@
 .navbar {
     display: flex;
     width: auto;
-    /* height: 20px; */
+    height: 20px;
     background: #171719;
     padding: .1rem 5rem;
 	justify-content: space-between;
