--- a/css/header.css
+++ b/css/header.css
@@ -2,9 +2,9 @@
 .navbar {
     display: flex;
     width: auto;
-    height: 20px;
+    /* -webkit-height: 20px; */
     background: #171719;
-    padding: .1rem 5rem;
+    padding: 1px 5px;
 	justify-content: space-between;
 	align-items: center;
     /* position: fixed; */
